update: 添加几条基础命令

--- a/doc/协议文档.md
+++ b/doc/协议文档.md
@@ -72,12 +72,6 @@ struct macpkg {
 | 命令类型 | 数据长度 | 功能描述                | 数据描述|
 | ---     | ---      | ---                   | ---     |
 | 0x40    | any      | EVAL_REQ              | lua语句字符串|
-| 0x41    | 4        | EVAL_RESP             | 成功返回0,其他请求返回1|
-| 0x42    | any      | CALL_REQ              | 调用一个函数|
-| 0x43    | any      | CALL_RESP             | 返回调用结果|
+| 0x41    | any      | CALL_REQ              | 调用一个函数|
 | 0x42    | any      | SUB_REQ               | 订阅一个topic|
-| 0x43    | 4        | SUB_RESP              | 返回订阅结果|
-| 0x44    | any      | UNSUB_REQ             | 取消订阅一个topic|
-| 0x45    | 4        | UNSUB_RESP            | 返回执行结果|
-| 0x46    | any      | PUB_REQ               | 发布一个topic|
-| 0x47    | 4        | PUB_RESP              | 返回执行结果|
+| 0x43    | any      | PUB_REQ               | 传输一个topic及参数|
